@startuml
skinparam linetype ortho
skinparam nodesep 120
skinparam ranksep 100

!startsub TESTDESCRIPTION
!includesub entity_description.puml!ENTITY_DESCRIPTION
!includesub map.puml!MAP

class BenchmarkDescription {
    - name : str
    - description : str
    + BenchmarkDescription(name : str, description : str, testlist : TestDescription[])
    + get_name() : name
    + get_description() : description
    + get_tests() : (TestDescription[])
    + get_metrics() : (Metric[])
}

class TestDescription {
    'map : Graph
    'agents_description: AgentDescription[]
    'objectives_description : ObjectiveDescription[]
    'obstacles_description : ObstacleDescription[]
    '- metrics : Metric[]
    + __init__(self, name : str, map : Graph, agents : AgentDescription[], agents : AgentDescription[], objectives : ObjectiveDescription[])
    + get_name() : str
    + get_map() : Graph
    + get_entities_description() : (EntityDescription[])
    + get_agents_description() : (AgentDescription[])
    + get_objectives_description() : (ObjectiveDescription[])
    + get_obstacles_description() : (ObstacleDescription[])
    + get_metrics() : (Metric[])
}

BenchmarkDescription -l-* "1..*" TestDescription : - tests
BenchmarkDescription --> "*" Metric : - aggregate_metrics

TestDescription -r-> "*" Metric
TestDescription --o Graph
TestDescription -u-* "1..*" AgentDescription : - agents_description
TestDescription -u-* "1..*" ObjectiveDescription : - objectives_description
TestDescription -u-* "*" ObstacleDescription : - obstacles_description
!endsub

@enduml